# AI-Marketing-Automation-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: campaigns.py
app/core/: logging_config.py
app/database/: database.py
app/models/: campaign.py
app/schemas/: campaign.py
app/services/: image_generator.py  scheduler_service.py  sms_service.py  text_generator.py
app/services/providers/: base.py  claude_provider.py  factory.py  gemini_image_provider.py  gemini_provider.py  image_base.py  image_factory.py  mock_image_provider.py  mock_provider.py  openai_image_provider.py  openai_provider.py
