[project]
name = "ai-marketing-automation-system"
version = "0.1.0"
description = "AI Marketing Automation System built with FastAPI and SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "gunicorn>=26.0.0",
    "uvicorn-worker>=0.4.0",
]
